# bevy_state_tool

./: Cargo.toml  README.md  template.txt  template_mod.txt
src/: lib.rs  to_snake_case.rs
