[package]
name = "bevy_state_tool"
version = "0.2.1"
edition = "2021"
authors =["IllusionAutumn d161442079@163.com"]
description = "A small package to simplify bevy writing"
license = "MIT OR Apache-2.0"
include = [
    "**/*.rs",
    "Cargo.toml",
    "template_mod.txt",
    "template.txt",
]
repository = "https://github.com/yIllusionSky/bevy_state_tool"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"